import "client.comm.proto";
import "client.role_props.proto";
import "client.jump_scene.proto";
package client;

// 聊天消息的主体，用来服务端向客户端下发此PB消息
message chat_msg {
    enum CHANNEL
    {
        WORLD          = 1;    //世界
        SCENE          = 2;	//场景
        FAMILY         = 3;   	//军团
        TEAM           = 4;	//组队
        PRIVATE        = 5;	//私聊
        SYSTEM         = 6;	//系统
        HORN           = 7;    // 扣除喇叭
        FRIEND         = 8;	//好友
        ANNOUNCE       = 9;   //公告（跑马灯）
        WINDOW         = 10;	//弹窗
        THREELINE      = 11;	//三行提示
        EXPLORE        = 12;	//探险系统消息
        KILL           = 13;	//击杀系统消息
        SHOUT          = 14;	//喊话
        HORN_BROADCAST = 15; // 喇叭广播
        NPC            = 16;
    }
    required CHANNEL channel = 1; // 聊天频道
    
    required uint32 src_rold_id = 2; //发起聊天的角色ID     当聊天频道为6或9时为系统消息配置ID
    optional string src_role_name = 3; // 发起聊天的角色名
    optional uint32 src_vip_lvl = 4;   // 发起聊天的VIP等级
    optional string src_title = 5;     // 发起聊天人的称号 
    optional uint32 src_profession = 6;// 发起聊天人的职业
    optional uint32 src_sex = 7; // 发起聊天人的性别
    
    optional bytes content = 8;  // 聊天内容;表情客户端自定义，自解析，服务端不关心   当聊天频道为6或9时为各个解析字段 用|分隔  
    
    repeated props_info pi = 9;  // 要展示的装备信息
    
    optional jump_scene jump = 10; // 要求跳转的地址
    
    optional uint32 act_type = 11; // 行为类型
    
    optional uint32 dst_role_id = 12; // 接收聊天人的角色ID，仅用于1:1
}

// 客户端发送的聊天消息
message client_chat_msg {
    required chat_msg cm = 1; // 聊天请求的内容

    optional server_head svr_head = 1000; // 服务端填写项，客户端不需要关心也不必填写数据
}

// 向center请求相关头衔数据（聊天用）(服务器内部使用)
message update_title_info_req {
	required uint32 role_id  = 1;
}

message update_title_info_rsp {
	required uint32 role_id		  = 1;
	optional uint32 family_title  = 2;
	optional string family_name   = 3; 
	optional bool   is_siege	  = 4; // 是否江山占领的军团
}