
package mysql;

message tb_role_statis{
    required uint32 role_id = 1;
    required uint32 statis_type = 2;
    required uint32 update_type = 3;
    required uint32 val = 4;
    required uint32 last_time = 5;
}
